src/components/BottomBar/bottomBar.scss
.bottom-bar {
  display: flex;
  align-items: center;
  background: rgb(27, 29, 37);
  height: 80px;
  width: 100%;
  min-width: 1280px;
  position: absolute;
  bottom: 0;
  left: 0;
  overflow: hidden;
  box-shadow: rgba(0, 0, 0, .5) -1px -1px 10px;
  font-family: 'Roboto', sans-serif;

  .img-wrap {
    height: 60px;
    width: 60px;
    margin-left: 20px;
    margin-right: 20px;

    img {
      height: 60px;
      width: 60px;
      border-radius: 50%;
    }
  }

  .info {
    color: white;
    padding: 0 0 0 0;
    width: 150px;

    h5 {
      padding: 0 0 1px 0;
      margin: 0;
      font-weight: normal;
      font-size: 15px;
      letter-spacing: 1px;
      width: 150px;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }

    p {
      padding: 0;
      margin: 0;
      font-size: 12px;
      color: rgba(255, 255, 255, .7);
      width: 150px;
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }
  }

  .controls {
    display: flex;
    align-items: center;
    padding: 0 20px 0 20px;

    img {
      padding: 0 12px 0 12px;
      cursor: pointer;
    }
  }

  input[type='range'] {
      width: 100%;
      -webkit-appearance: none;
      -moz-appearance: none;
      -ms-progress-appearance: none;
      border-radius: 11px;
      border: none;
      height: 8px;
      background-color: #333745;
      overflow: hidden;
      outline: none;
      cursor: pointer;
    }

    input[type='range']::-webkit-slider-thumb {
      width: 0;
      -webkit-appearance: none;
      height: 10px;
      box-shadow: -800px 0 0 800px #ea2e49;
    }

  .seek-slider {
    flex-grow: 1;
    display: flex;
    padding: 0 20px 0 20px;
    align-items: center;

    span {
      font-size: 12px;
      color: white;
      padding: 0 8px 0 8px;
    }

  }

  .repeat-shuffle {
    padding: 0 20px 0 20px;
    display: flex;
    align-items: center;
    img {
      padding: 0 12px 0 12px;
    }
  }

  .volume-slider {
    display: flex;
    align-items: center;
    padding: 0 20px 0 20px;

    img {
      padding: 0 8px 0 8px
    }
  }

  .tooltip {
    background: rgba(0, 0, 0, .8)!important;
    color: white!important;
  }
}

